k8s-manifests/food-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  name: webapp-food
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-food
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp-food
    spec:
      containers:
      - image: kodekloud/ecommerce:food
        imagePullPolicy: Always
        name: webapp-food
        ports:
        - containerPort: 8080
          protocol: TCP
