k8s-manifests/pay-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  name: webapp-pay
  namespace: critical-space
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: webapp-pay
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webapp-pay
    spec:
      containers:
      - image: kodekloud/ecommerce:pay
        imagePullPolicy: Always
        name: webapp-pay
        ports:
        - containerPort: 8080
          protocol: TCP
