k8s-manifests/pay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pay-service
  namespace: critical-space
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-pay
  type: ClusterIP
